tests/sem/error/typecast_lvalue.c
char* str[6];

void main() {
    (char*)str = "Hello";
}


